# internal/models/database.go
@@ -18,17 +18,6 @@ func (base *BaseModel) BeforeCreate() (err error) {
 	return
 }
 
-type InteractorModel struct {
-	BaseModel
-	SourceID uuid.UUID `gorm:"type:uuid;not null"`
-	TargetID uuid.UUID `gorm:"type:uuid;not null"`
-}
-
-func (interactor *InteractorModel) BeforeCreate() (err error) {
-	interactor.ID = uuid.New()
-	return
-}
-
 type User struct {
 	BaseModel
 	Role     Role   `gorm:"default:user"`
@@ -74,6 +63,7 @@ type Post struct {
 	User    User      `gorm:"foreignKey:UserID;references:ID"`
 	Text    string    `gorm:"type:text"`
 	Privacy Privacy   `gorm:""`
+	Media   []Media
 }
 
 func (p *Post) ToResponse() *PostResponse {
@@ -96,21 +86,53 @@ func (p *Post) ToResponse() *PostResponse {
 }
 
 type Follow struct {
-	InteractorModel
+	BaseModel
+	SourceUserID uuid.UUID `gorm:"type:uuid;not null"`
+	TargetUserID uuid.UUID `gorm:"type:uuid;not null"`
 }
 
 type Like struct {
-	InteractorModel
+	BaseModel
+	UserID uuid.UUID `gorm:"type:uuid;not null"`
+	PostID uuid.UUID `gorm:"type:uuid;not null"`
 }
 
 type Bookmark struct {
-	InteractorModel
+	BaseModel
+	UserID uuid.UUID `gorm:"type:uuid;not null"`
+	PostID uuid.UUID `gorm:"type:uuid;not null"`
 }
 
 type Block struct {
-	InteractorModel
+	BaseModel
+	SourceUserID uuid.UUID `gorm:"type:uuid;not null"`
+	TargetUserID uuid.UUID `gorm:"type:uuid;not null"`
 }
 
 type Media struct {
-	InteractorModel
+	BaseModel
+	UserID    uuid.UUID  `gorm:"type:uuid;not null"`
+	User      User       `gorm:"foreignKey:UserID;references:ID"`
+	PostID    *uuid.UUID `gorm:"type:uuid"`
+	Post      Post       `gorm:"foreignKey:PostID;references:ID"`
+	Extension string     `gorm:"not null"`
+}
+
+func (m *Media) ToResponse() *MediaResponse {
+	return &MediaResponse{
+		Links: MediaLinks{
+			Self: "todo",
+		},
+		Data: []MediaData{
+			{
+				Type: DataTypeMedia,
+				ID:   m.ID,
+				Attributes: MediaAttributes{
+					UserID:    m.UserID,
+					PostID:    m.PostID,
+					Extension: m.Extension,
+				},
+			},
+		},
+	}
 }
